Anchored stable bar

--- a/Project/250223/Experimental/Config/DefaultEngine.ini
+++ b/Project/250223/Experimental/Config/DefaultEngine.ini
@@ -53,6 +53,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Experimental")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="ExperimentalGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="ExperimentalCharacter")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=60.000000),UpperBound=(Type=Exclusive,Value=144.000000))
+MinDesiredFrameRate=144.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
