--- a/Project/250223/Experimental/Config/DefaultEngine.ini
+++ b/Project/250223/Experimental/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Sentient.Sentient
+GameDefaultMap=/Game/Levels/mainmenu.mainmenu
 EditorStartupMap=/Game/Levels/Sentient.Sentient
 GlobalDefaultGameMode="/Script/Experimental.ExperimentalGameMode"
 
