--- a/Project/250223/Experimental/Config/DefaultEngine.ini
+++ b/Project/250223/Experimental/Config/DefaultEngine.ini
@@ -6,12 +6,13 @@ GlobalDefaultGameMode="/Script/Experimental.ExperimentalGameMode"
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=3
 r.Lumen.TraceMeshSDFs=0
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+r.AntiAliasingMethod=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
